# rules_svelte

./: .gitignore  LICENSE.md  README.md  WORKSPACE  defs.bzl  package.bzl
integration-test/: BUILD.bazel  WORKSPACE  app.svelte  index.html  main-prod.js  main.js  package.json
integration-test-1/: App.svelte  BUILD.bazel  WORKSPACE  package.json
integration-test-1/app/client/: App.svelte  BUILD.bazel
integration-test-1/app/client/grid/: BUILD.bazel  Grid.svelte
integration-test-1/grid/: Grid.svelte  person-service.js
integration-test-2/: BUILD.bazel  WORKSPACE  package.json
integration-test-2/client/: App.svelte  BUILD.bazel  index.html  main.js
integration-test/app/client/: BUILD.bazel  app.svelte  main-dev.js
integration-test/grid/: BUILD.bazel
internal/: BUILD.bazel  bundle-dev.bzl  bundle-prod.bzl  closure.js  copy-files.bzl  create-config.js  get-config.bzl  get-files.bzl  package.json  rollup.js  svelte.bzl  svelte.js
test-closure-compiler/: .bazelrc  WORKSPACE  bazel-out  package.json
test-closure-compiler-lazy-load/: .bazelrc  App.svelte  BUILD.bazel  WORKSPACE  closure-config.json  index.html  main.js  package.json
test-closure-compiler-lazy-load/route1/: BUILD.bazel  Route1.svelte  main.js
test-closure-compiler-lazy-load/route2/: BUILD.bazel  Route2.svelte  main.js
test-closure-compiler-lazy-load/utils/: BUILD.bazel  mount-util.js
test-closure-compiler/client/: App.svelte  BUILD.bazel  closure-config.json  index.html  main-closure.js
test-closure-compiler/client/component1/: BUILD.bazel
test-closure-compiler/client/component10/: BUILD.bazel
test-closure-compiler/client/component11/: BUILD.bazel
test-closure-compiler/client/component12/: BUILD.bazel
test-closure-compiler/client/component13/: BUILD.bazel
test-closure-compiler/client/component14/: BUILD.bazel
test-closure-compiler/client/component15/: BUILD.bazel
test-closure-compiler/client/component16/: BUILD.bazel
test-closure-compiler/client/component17/: BUILD.bazel
test-closure-compiler/client/component18/: BUILD.bazel
test-closure-compiler/client/component19/: BUILD.bazel
test-closure-compiler/client/component2/: BUILD.bazel
test-closure-compiler/client/component20/: BUILD.bazel
test-closure-compiler/client/component21/: BUILD.bazel
test-closure-compiler/client/component22/: BUILD.bazel
test-closure-compiler/client/component23/: BUILD.bazel
test-closure-compiler/client/component24/: BUILD.bazel
test-closure-compiler/client/component25/: BUILD.bazel
test-closure-compiler/client/component26/: BUILD.bazel
test-closure-compiler/client/component27/: BUILD.bazel
test-closure-compiler/client/component28/: BUILD.bazel
test-closure-compiler/client/component29/: BUILD.bazel
test-closure-compiler/client/component3/: BUILD.bazel
test-closure-compiler/client/component30/: BUILD.bazel
test-closure-compiler/client/component31/: BUILD.bazel
test-closure-compiler/client/component32/: BUILD.bazel
test-closure-compiler/client/component33/: BUILD.bazel
test-closure-compiler/client/component34/: BUILD.bazel
test-closure-compiler/client/component35/: BUILD.bazel
test-closure-compiler/client/component36/: BUILD.bazel
test-closure-compiler/client/component37/: BUILD.bazel
test-closure-compiler/client/component38/: BUILD.bazel  Component38.svelte
test-closure-compiler/client/component39/: BUILD.bazel
test-closure-compiler/client/component4/: BUILD.bazel
test-closure-compiler/client/component40/: BUILD.bazel
test-closure-compiler/client/component41/: BUILD.bazel
test-closure-compiler/client/component42/: BUILD.bazel
test-closure-compiler/client/component43/: BUILD.bazel
test-closure-compiler/client/component44/: BUILD.bazel
test-closure-compiler/client/component45/: BUILD.bazel
test-closure-compiler/client/component46/: BUILD.bazel
test-closure-compiler/client/component47/: BUILD.bazel
test-closure-compiler/client/component48/: BUILD.bazel
test-closure-compiler/client/component49/: BUILD.bazel
test-closure-compiler/client/component5/: BUILD.bazel
test-closure-compiler/client/component50/: BUILD.bazel
test-closure-compiler/client/component6/: BUILD.bazel
test-closure-compiler/client/component7/: BUILD.bazel
test-closure-compiler/client/component8/: BUILD.bazel
test-closure-compiler/client/component9/: BUILD.bazel
test-rollup/: .bazelrc  WORKSPACE  bazel-out  index.html  package.json
test-rollup/grid/: BUILD.bazel
