load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@build_bazel_rules_svelte//:defs.bzl", "bundle_dev", "bundle_prod", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "ProdApp",
    srcs = ["main-prod.js"],
    entry_point = "App.svelte",
    deps = [
        "//grid:Grid",
    ],
)

svelte(
    name = "DevApp",
    srcs = ["main-dev.js"],
    entry_point = "App.svelte",
    deps = [
        "//grid:Grid",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        ":bundle_dev",
        ":bundle_prod",
        ":index.html",
        "@test_deps//lite-server",
    ],
    entry_point = "@test_deps//:node_modules/lite-server/bin/lite-server",
    visibility = ["//visibility:public"],
)

bundle_dev(
    name = "bundle_dev",
    entry_point = "main-dev.js",
    deps = [
        ":DevApp",
        "@test_deps//lodash",
    ],
)

bundle_prod(
    name = "bundle_prod",
    entry_point = "main-prod.js",
    deps = [
        ":ProdApp",
        "@test_deps//lodash",
    ],
)
