load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "typescript",
    data = [
        "@build_bazel_rules_svelte_deps//typescript",
    ],
    entry_point = "@build_bazel_rules_svelte_deps//:node_modules/typescript/lib/tsc.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "create_config",
    data = [
        "create-config.js",
    ],
    entry_point = "create-config.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "rollup_bin",
    data = [
        "@build_bazel_rules_svelte_deps//@rollup/plugin-commonjs",
        "@build_bazel_rules_svelte_deps//@rollup/plugin-node-resolve",
        "@build_bazel_rules_svelte_deps//rollup",
        "@build_bazel_rules_svelte_deps//svelte",
        "@build_bazel_rules_svelte_deps//uglify-js",
    ],
    entry_point = "@build_bazel_rules_svelte_deps//:node_modules/rollup/dist/bin/rollup",
    # Disable rules_nodejs patch that breaks relative imports of compiled .svelte.js files
    # See: https://github.com/bazelbuild/rules_nodejs/commit/7d070ffadf9c3b41711382a4737b995f987c14fa
    templated_args = ["--nobazel_node_patches"],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "uglify",
    data = [
        "@build_bazel_rules_svelte_deps//uglify-js",
    ],
    entry_point = "@build_bazel_rules_svelte_deps//:node_modules/uglify-js/bin/uglifyjs",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "svelte",
    data = [
        ":svelte.js",
        "@build_bazel_rules_svelte_deps//svelte",
    ],
    entry_point = ":svelte.js",
    visibility = ["//visibility:public"],
)
