load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "typescript",
    data = [
        "@build_bazel_rules_svelte_deps//typescript",
    ],
    entry_point = "@build_bazel_rules_svelte_deps//:node_modules/typescript/lib/tsc.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "create_config",
    data = [
        "create-config.js",
    ],
    entry_point = "create-config.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "rollup_bin",
    data = [
        "@build_bazel_rules_svelte_deps//@rollup/plugin-commonjs",
        "@build_bazel_rules_svelte_deps//@rollup/plugin-node-resolve",
        "@build_bazel_rules_svelte_deps//rollup",
        "@build_bazel_rules_svelte_deps//svelte",
        "@build_bazel_rules_svelte_deps//uglify-js",
    ],
    entry_point = "@build_bazel_rules_svelte_deps//:node_modules/rollup/dist/bin/rollup",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "uglify",
    data = [
        "@build_bazel_rules_svelte_deps//uglify-js",
    ],
    entry_point = "@build_bazel_rules_svelte_deps//:node_modules/uglify-js/bin/uglifyjs",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "svelte",
    data = [
        ":svelte.js",
        "@build_bazel_rules_svelte_deps//svelte",
    ],
    entry_point = ":svelte.js",
    visibility = ["//visibility:public"],
)
