load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")

nodejs_binary(
    name = "create_config",
    data = [
        "create-config.js",
    ],
    entry_point = "create-config.js",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "svelte_deps", 
    srcs = glob(["node_modules/svelte/**/*.mjs", "node_modules/svelte/**/package.json"]),
    visibility = ["//visibility:public"]
)

nodejs_binary(
    name = "rollup_bin",
    data = [
        "@build_bazel_rules_svelte_deps//@rollup/plugin-commonjs",
        "@build_bazel_rules_svelte_deps//@rollup/plugin-node-resolve",
        "@build_bazel_rules_svelte_deps//rollup",
        "@build_bazel_rules_svelte_deps//svelte",
        "@build_bazel_rules_svelte_deps//terser",
        "@build_bazel_rules_svelte_deps//google-closure-compiler"
    ],
    entry_point = "@build_bazel_rules_svelte_deps//:node_modules/rollup/dist/bin/rollup",
    # Disable rules_nodejs patch that breaks relative imports of compiled .svelte.js files
    # See: https://github.com/bazelbuild/rules_nodejs/commit/7d070ffadf9c3b41711382a4737b995f987c14fa
    templated_args = ["--nobazel_node_patches"],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "closure_bin",
    data = [
        "@build_bazel_rules_svelte_deps//google-closure-compiler",
        "@build_bazel_rules_svelte_deps//svelte",
        "@build_bazel_rules_svelte_deps//find-up"
    ],
    entry_point = ":closure.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "terser",
    data = [
        "@build_bazel_rules_svelte_deps//terser",
    ],
    entry_point = "@build_bazel_rules_svelte_deps//:node_modules/terser/bin/terser",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "svelte_bin",
    data = [
        ":svelte.js",
        "@build_bazel_rules_svelte_deps//svelte",
        "@build_bazel_rules_svelte_deps//@bazel/worker",
    ],
    entry_point = ":svelte.js",
    visibility = ["//visibility:public"],
)
