package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@build_bazel_rules_svelte//:defs.bzl", "bundle_prod", "svelte")

svelte(
    name = "App",
    srcs = ["main.js"],
    entry_point = "App.svelte",
)

bundle_prod(
    name = "bundle_prod",
    entry_point = "main.js",
    deps = [
        ":App",
        "@npm//lodash",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        "index.html",
        ":bundle_prod",
        "@npm//lite-server",
    ],
    entry_point = "@npm//:node_modules/lite-server/bin/lite-server",
    templated_args = ["--baseDir=client"],
)
