load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@build_bazel_rules_svelte//:defs.bzl", "bundle_prod", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "App",
    srcs = ["main-closure.js"],
    entry_point = "App.svelte",
)

bundle_prod(
    name = "bundle_prod_closure",
    entry_point = "main-closure.js",
    closure_config = ":closure-config.json",
    deps = [
        ":App",
        "@npm//rxjs",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        "index.html",
        ":bundle_prod_closure",
        "@npm//lite-server",
        "@npm//rxjs",
    ],
    entry_point = "@npm//:node_modules/lite-server/bin/lite-server",
    templated_args = ["--baseDir=client"],
)
