load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@build_bazel_rules_svelte//:defs.bzl", "bundle_prod", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "App",
    srcs = ["main-closure.js"],
    entry_point = "App.svelte",
    deps = [
        "//client/component1:Component1",
        "//client/component2:Component2",
        "//client/component3:Component3",
        "//client/component4:Component4",
        "//client/component5:Component5",
        "//client/component6:Component6",
        "//client/component7:Component7",
        "//client/component8:Component8",
        "//client/component9:Component9",
        "//client/component10:Component10",
        "//client/component11:Component11",
        "//client/component12:Component12",
        "//client/component13:Component13",
        "//client/component14:Component14",
        "//client/component15:Component15",
        "//client/component16:Component16",
        "//client/component17:Component17",
        "//client/component18:Component18",
        "//client/component19:Component19",
        "//client/component20:Component20",
        "//client/component21:Component21",
        "//client/component22:Component22",
        "//client/component23:Component23",
        "//client/component24:Component24",
        "//client/component25:Component25",
        "//client/component26:Component26",
        "//client/component27:Component27",
        "//client/component28:Component28",
        "//client/component29:Component29",
        "//client/component30:Component30",
        "//client/component31:Component31",
        "//client/component32:Component32",
        "//client/component33:Component33",
        "//client/component34:Component34",
        "//client/component35:Component35",
        "//client/component36:Component36",
        "//client/component37:Component37",
        "//client/component38:Component38",
        "//client/component39:Component39",
        "//client/component40:Component40",
        "//client/component41:Component41",
        "//client/component42:Component42",
        "//client/component43:Component43",
        "//client/component44:Component44",
        "//client/component45:Component45",
        "//client/component46:Component46",
        "//client/component47:Component47",
        "//client/component48:Component48",
        "//client/component49:Component49",
        "//client/component50:Component50",
    ]
)

bundle_prod(
    name = "bundle_prod_closure",
    entry_point = "main-closure.js",
    closure_config = ":closure-config.json",
    deps = [
        ":App",
        "@npm//rxjs",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        "index.html",
        ":bundle_prod_closure",
        "@npm//lite-server",
        "@npm//rxjs",
    ],
    entry_point = "@npm//:node_modules/lite-server/bin/lite-server",
    templated_args = ["--baseDir=client"],
)
